--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "ahooks": "^2.9.1",
     "axios": "^0.21.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.1",
