--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "ant-design-vue": "^1.7.2",
     "core-js": "^3.6.5",
+    "global": "^4.4.0",
     "qs": "^6.9.4",
     "vue": "^2.6.11",
+    "vue-cli": "^2.9.6",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
