feat: 培训管理 职称管理，职称管理差一点

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ant-design-vue": "^1.7.2",
     "core-js": "^3.6.5",
     "global": "^4.4.0",
+    "moment": "^2.29.1",
     "qs": "^6.9.4",
     "vue": "^2.6.11",
     "vue-cli": "^2.9.6",
