--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "prettier": "prettier -c --write \"**/*\"",
+    "lint": "vue-cli-service lint & tyarn prettier"
   },
   "dependencies": {
     "ant-design-vue": "^1.7.2",
